     creating a PHPlot object. Added note to PHPlot constructor reference
     explaining why. This was the result of the fix for bug report #1790441,
     which removed the  shutdown function, which was the reason for the
     reference assignment.

   * Document that SetLegendWorld() no longer has to have scale setup before

2007-09-05
   * Change note on SetXLabelType for new behavior: ignoring blank labels.

2007-08-26
   * Document new option in SetLegendStyle: $colorbox_align = 'none'.

2007-08-04
   * Added documentation for new function SetLegendStyle.

2006-12-01
   * No changes, but regenerate the manual because the examples showed
     a change in tick/label counts at 5.0rc3 and this has been patched.

2006-11-29
   * Add new example bars4 showing bar chart data labels.
   * Fix notes comment at top of examples.xml: remove obsolete info on
     scaling of pictures for PDF output. Add notes on example order and
     referencing.

2006-11-28

   * Default 'time' format was fixed at 5.0rc3 as %H:%M:%S.
   * Found and fixed more references to "no Y data labels".

2006-11-27 Changes to catch up to 5.0rc3 release:

   * Update PHP version requirement. Min is 4.3.0 (not 4.2); PHP5 works; always
     use the latest versions.
   * Updated text to more closely match the release README file instructions,
     including ZIP file availability and no TrueType fonts included.
   * Delete note about "included examples and documentation", as they are no
     longer included in the release.

   * Changed 3 examples that use random data to seed the generator with a
     fixed value. So now the graphs won't change and file compares work.

   * Note how to get borderless, unshaded bars with SetDataBorderColors.

   * Document new values in SetPointShapes and SetLineStyles to suppress
     point markers or lines for individual datasets in 'linepoints' plots.
     (New feature in 5.0rc3)

   * Document new bar chart data labels with SetYDataLabelPos('plotin').
